widget/nsBaseWidget.h
@@ -367,7 +367,7 @@ public:
 
   virtual void StartAsyncScrollbarDrag(const AsyncDragMetrics& aDragMetrics) override;
 
-  virtual void StartAsyncAutoscroll(const ScreenPoint& aAnchorLocation,
+  virtual bool StartAsyncAutoscroll(const ScreenPoint& aAnchorLocation,
                                     const ScrollableLayerGuid& aGuid) override;
 
   virtual void StopAsyncAutoscroll(const ScrollableLayerGuid& aGuid) override;
